# nativegen

./: CMakeLists.txt  LICENSE  README.md
examples/SimpleWindow/: SimpleWindow.ngen  main.ngml
genfiles/: App.cpp  App.hpp  Main.cpp  NGWindow.cpp  NGWindow.hpp
genfiles/linux/: NGLinuxWindow.cpp  NGLinuxWindow.hpp  Window.mk
src/: LexerUtils.cpp  Main.cpp  Utils.cpp
src/include/: LexerUtils.hpp  Utils.hpp
src/ngen/: Analyzer.cpp  Gen.cpp  Lexer.cpp  ProjectGenerator.cpp
src/ngen/include/: Analyzer.hpp  Gen.hpp  Lexer.hpp  ProjectGenerator.hpp
src/ngml/: Lexer.cpp
src/ngml/include/: Lexer.hpp
